src/styles/toc.scss
.toc {
  flex-direction: column;
}
.toc-header {
  font-size: var(--amplify-font-sizes-medium);
  font-weight: 700;
  padding: 0 var(--amplify-space-xs);
}
.toc-list {
  margin: 0;
  list-style: none;
  padding: 0;
}

.toc-item {
  &__link {
    display: block;
    padding: var(--amplify-space-xxxs) var(--amplify-space-xs);
    color: var(--amplify-colors-font-primary);
    text-decoration: none;
    &:visited {
      color: var(--amplify-colors-font-primary);
    }
    &:hover {
      text-decoration: underline;
    }
    &--h3 {
      padding-inline-start: var(--amplify-space-large);
    }
  }
}

@media (min-width: 1360px) {
  .toc {
    width: var(--layout-toc-width);
    position: fixed;
    right: 0;
    top: var(--docs-dev-center-nav);
    bottom: 0;
    border-left: 1px solid var(--amplify-colors-neutral-20);
    padding: var(--amplify-space-medium);
    z-index: 1;
  }
}

